--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@egjs/react-flicking": "^4.11.1",
     "@heroicons/react": "^2.0.18",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
     "sort-by": "^1.2.0"
   },
