--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@egjs/react-flicking": "^4.11.1",
+    "@emailjs/browser": "^3.11.0",
     "@heroicons/react": "^2.0.18",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
@@ -21,7 +22,8 @@
     "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
